# indonesian-tweet-classification-indobert

./: .gitignore  README.md  pyproject.toml
legacy/: multi-class-nlp.ipynb
notebooks/: 01-data-preprocessing.ipynb  02-model-training-indobert.ipynb  03-llm-training-generative.ipynb  data_preprocessing.ipynb
