[project]
name = "indonesian-tweet-classification-indobert"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Abdul Fathin Fawwaz", email = "abdulfathinfawwaz@gmail.com"},
]
dependencies = ["pandas>=2.3.0", "numpy>=2.3.1", "transformers>=4.53.1", "torch>=2.7.1", "scikit-learn>=1.7.0", "seaborn>=0.13.2", "matplotlib>=3.10.3", "ipykernel>=6.29.5"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
