[project]
name = "indonesian-tweet-classification-indobert"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Abdul Fathin Fawwaz", email = "abdulfathinfawwaz@gmail.com"},
]
dependencies = [
    "pandas>=2.3.0",
    "numpy>=2.3.1",
    "transformers>=4.53.1",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "matplotlib>=3.10.3",
    "ipykernel>=6.29.5",
    "indonlp>=0.3.4",
    "ipywidgets>=8.1.7",
    "datasets>=3.6.0",
    "torch>=2.7.1"
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[tool.pdm.resolution]
respect-source-order = true
excludes = [
    "nvidia-cublas-cu12",
    "nvidia-cuda-cupti-cu12",
    "nvidia-cuda-nvrtc-cu12",
    "nvidia-cuda-runtime-cu12",
    "nvidia-cudnn-cu12",
    "nvidia-cufft-cu12",
    "nvidia-curand-cu12",
    "nvidia-cusolver-cu12",
    "nvidia-cusparse-cu12",
    "nvidia-nccl-cu12",
    "nvidia-nvtx-cu12",
    "triton",
]

[[tool.pdm.source]]
name = "private-pypi"
url = "https://download.pytorch.org/whl/cu128"
include_packages = ["torch", "torchvision", "torchaudio"]